--- a/css/board_alex.css
+++ b/css/board_alex.css
@@ -25,6 +25,12 @@
     cursor: pointer;
 }
 
+.board-main {
+    height: 100vh;
+    width: 100%;
+    background-color: #f6f7f8;
+    font-size: 16px;
+}
 
 .board-header {
     display: flex;
@@ -129,4 +135,81 @@
         box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16);
     }
 
+}
+
+.task-item {
+    width: fit-content;
+    flex-direction: column;
+    background-color: white;
+    border-radius: 24px;
+    padding: 16px;
+}
+
+.task-category {
+    display: inline-block;
+    background-color: var(--user);
+    color: var(--white);
+    padding: 4px 16px;
+    border-radius: 8px;
+    font-size: 16px;
+}
+
+.task-title {
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--primary-color);
+    padding: 24px 0 8px 0;
+}
+
+.task-description {
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--icons);
+    margin-bottom: 24px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    /* Zeilenanzahl auf 2 begrenzen */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    /* max-height: 2.5em; */
+}
+
+.subtask-cnt {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 24px;
+}
+
+.assigned-users-cnt {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 8px;
+}
+
+.initials-cnt {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.initials {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 32px;
+    background-color: var(--user);
+    color: var(--white);
+    border: 2px solid var(--white);
+    border-radius: 50%;
+    font-size: 12px;
+    margin-left: -10px;
+}
+
+/* Erster Kreis soll keinen negativen Abstand nach links haben */
+.initials:first-child {
+    margin-left: 0;
 }
